Name:                   vapix-api
Version:                0.0.0
Author:                 Kevin Cotrone <kevincotrone@gmail.com>
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Network.Vapix
                      , Network.Vapix.Parser
                      , Network.Vapix.Types
  Other-Modules:        Network.Vapix.Internal
  Build-Depends:        base >= 4 && < 5
                      , wreq
                      , attoparsec
                      , time
                      , xml2json
                      , aeson

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , wreq
                      , attoparsec
                      , time
                      , xml2json
                      , aeson

Source-Repository head
  Type:                 git
--  Location:             
